Did more practice on angular

--- a/E-Commerce/src/app/home/home.component.html
+++ b/E-Commerce/src/app/home/home.component.html
@@ -3,12 +3,15 @@
     <nav>
       <ul>
         <div class="left-navbar">
-          <li><a routerLink="updateProfile"class="current-page">Shop</a></li>
+          <li><a routerLink="/updateProfile" class="current-page">Shop</a></li>
           <li><input type="text" placeholder="search a product"></li>
         </div>
         <div class="right-navbar">
           <li ><a  ><i class="fa fa-address-book" aria-hidden="true"></i></a></li>
           <li (click)="open()"><a >Customer</a></li>
+          <!-- <li><a href="#"><span class="material-symbols-outlined">
+            person
+          </span></a></li> -->
         </div>
 
       </ul>
