--- a/ecommerce/src/app/edit-profile/edit-profile.component.css
+++ b/ecommerce/src/app/edit-profile/edit-profile.component.css
@@ -4,7 +4,9 @@
   box-sizing: border-box;
   font-family: 'Montserrat', sans-serif;
 }
+
 .content {
+  width: 70%;
   padding: 30px;
   display: flex;
   justify-content: center;
@@ -19,7 +21,6 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
-  /* border: 2px solid blue; */
 
 }
 
